# lrs

./: Cargo.toml  README.md  install.sh
src/: args.rs  error.rs  exit_status.rs  main.rs  math.rs  working_set.rs
src/filesystem/: dev_ino.rs  error.rs  fileinfo.rs  ignore_mode.rs  loop_manager.rs  mod.rs  pending.rs
src/print/: error.rs  format_info.rs  mod.rs  print_info.rs
